re-enabled ms word break all to prevent long text from overflowing chat
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@19138 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_chat.scss
+++ b/src/main/resources/scss/_chat.scss
@@ -305,7 +305,7 @@
 					word-break: normal;
 					word-break: break-word; // safari
 					// if long words/links still a problem in ie, uncomment:
-					//-ms-word-break: break-all;
+					-ms-word-break: break-all;
 					@include hyphens(auto);
 				}
 			}
